--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 </head>
 <body class="mainContainer">
      <h1>team 6</h1>
+     <ul>
+        <li>Katka Březinová</li>
+     </ul>
 </body>
 </html>
