--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   
 </head>
-<body class="mainContainer">
+ <body class="mainContainer">
      <h1>team 6</h1>
-</body>
+    <ul>
+        <li>Laura Popková</li>
+    </ul>
+ </body>
 </html>
