--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  
+  <title>My healthy cat</title>
+  <link rel="icon" type="image/x-icon" href="images/jp09ju9g.png" />
 </head>
  <body class="mainContainer">
      <!--
