--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Alena Vojíkova</li>
         <li>Katka Březinová</li>
         <li>Lívia Poláková</li>
-     </ul>
+        <li>Silvie Bohatová</li>
+    </ul>
 </body>
 </html>
