--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <title>My healthy cat</title>
-  <link rel="icon" type="image/x-icon" href="images/jp09ju9g.png" />
+  <meta charset="UTF-8" />
+  <title>My Healthy Cat</title>
+  <link rel="icon" type="image/x-icon" href="images/Návrh bez názvu.png" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playwrite+CZ:wght@100..400&display=swap" rel="stylesheet">
 </head>
  <body class="mainContainer">
      <!--
@@ -16,5 +21,13 @@
         <li>Silvie Bohatová</li>
     </ul>
     -->
+    <header>
+      <h1>My Healthy Cat</h1>
+      <img src="images/cat.png" alt="cats" />
+    </header>
+   
+    <p>
+      Stránka "My healthy cat" je ideálním místem pro všechny, kteří chtějí zajistit svým kočičím mazlíčkům co nejlepší péči. Naše stránka se zaměřuje na poskytování užitečných tipů a rad, co dělat a nedělat jako majitel kočky, abyste zajistili zdraví, štěstí a pohodu svého chlupatého kamaráda. Naše stránka je pravidelně aktualizována novými články a radami, které vám pomohou vytvořit harmonický a láskyplný domov pro vaši kočku. Navštivte nás a staňte se součástí komunity, která miluje kočky a sdílí zkušenosti a rady, jak o ně co nejlépe pečovat.
+    </p>
 </body>
 </html>
