--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>My Healthy Cat</title>
   <link rel="icon" type="image/x-icon" href="images/Návrh bez názvu.png" />
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="../css/main.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playwrite+CZ:wght@100..400&display=swap" rel="stylesheet">
