--- a/rady/rady.html
+++ b/rady/rady.html
@@ -25,7 +25,8 @@
     <header>
       <h1 class="logo">My Healthy Cat</h1>
     </header>
-   
+    <h3>1. Zajištění základních potřeb</h3>
+    
     <footer>
         My Healthy Cat 2024
     </footer>
