--- a/rady/rady.html
+++ b/rady/rady.html
@@ -26,7 +26,24 @@
       <h1 class="logo">My Healthy Cat</h1>
     </header>
     <h3>1. Zajištění základních potřeb</h3>
-    
+    <p class="baf">Strava: Krmte svou kočku kvalitními granulemi nebo konzervami, které odpovídají jejím věkovým potřebám (kotě, dospělá kočka, starší kočka). Vyhněte se lidským potravinám, které mohou být pro kočky nebezpečné. 
+        Voda: Kočka by měla mít neustále přístup k čerstvé vodě. Některé kočky preferují tekoucí vodu, proto může být užitečné pořídit fontánku pro kočky. 
+        Stelivo: Čistěte kočičí toaletu pravidelně, aby byla vždy čistá. Kočky jsou velmi čistotné a špinavá toaleta je může odradit od jejího používání.</p>
+        <h3>2. Zdraví</h3>
+        <p class="baf">Veterinární péče: Pravidelné návštěvy veterináře jsou klíčové. Kočky potřebují očkování, odčervení a pravidelné prohlídky. 
+            Kastrovaní: Kastrace nebo sterilizace může předejít mnoha zdravotním problémům a také nežádoucímu chování, jako je značkování teritoria. </p>
+          <h3>3. Chování a socializace</h3> 
+            <p class="baf">Socializace: Pokud máte kotě, seznamte ho s různými lidmi a prostředím, aby bylo dobře socializované. U dospělých koček to může trvat déle, ale stále je to možné. 
+                Škrábání: Poskytněte kočce škrabadlo, aby si mohla brousit drápky. To jí pomůže udržovat zdravé drápy a zároveň chrání váš nábytek. 
+                Hry a zábava: Kočky jsou velmi hravé a potřebují stimulaci. Pořiďte jim hračky, které je budou bavit a zaměstnávat. Interaktivní hračky a denní doba hraní s vámi pomůže udržet kočku fyzicky i psychicky zdravou. </p>
+            <h3>4. Bezpečnost</h3>
+            <p class="baf">Venkovní rizika: Pokud má kočka přístup ven, zajistěte, aby byla v bezpečném prostředí. Ideální je venkovní prostor s omezeným přístupem nebo zabezpečený výběh. 
+                Nebezpečné rostliny a chemikálie: Některé rostliny a domácí chemikálie jsou pro kočky toxické. Ujistěte se, že vaše kočka nemá k těmto látkám přístup.</p>
+            <h3>5. Trpělivost a láska </h3>
+            <p class="baf">Trpělivost: Kočky mají svou vlastní osobnost a někdy mohou být tvrdohlavé. Buďte trpěliví a respektujte jejich prostor a tempo. 
+                Láska a pozornost: Kočky potřebují vaši lásku a pozornost. Věnujte jim čas na mazlení a hru, aby se cítily milované a součástí rodiny.</p>
+                <h3>Proč není doporučeno dávat vaší kočce mléko?:</h3>
+                
     <footer>
         My Healthy Cat 2024
     </footer>
