verejne se omlouvam za to, ze jsem to rozbila, fix

--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -25,9 +25,9 @@
     </ul>
     -->
     <header>
-      <h1 class="logo">My Healthy Cat</h1>
+      <h1 id="logo">My Healthy Cat</h1>
     </header>
-   <h1>Fotky našich klientů</h1>
+    <h1>Fotky našich klientů</h1>
     <footer>
         My Healthy Cat 2024
     </footer>
