--- a/rady/rady.html
+++ b/rady/rady.html
@@ -23,7 +23,7 @@
     </ul>
     -->
     <header>
-      <h1 class="logo">My Healthy Cat</h1>
+      <h1 id="logo">My Healthy Cat</h1>
     </header>
     <h3>1. Zajištění základních potřeb</h3>
     <p class="baf">Strava: Krmte svou kočku kvalitními granulemi nebo konzervami, které odpovídají jejím věkovým potřebám (kotě, dospělá kočka, starší kočka). Vyhněte se lidským potravinám, které mohou být pro kočky nebezpečné. 
