--- a/template.html
+++ b/template.html
@@ -22,7 +22,7 @@
     </ul>
     -->
     <header>
-      <h1 class="logo">My Healthy Cat</h1>
+      <h1 id="logo">My Healthy Cat</h1>
     </header>
    
     <footer>
