--- a/memes/memes.html
+++ b/memes/memes.html
@@ -23,7 +23,7 @@
     </ul>
     -->
     <header>
-      <h1 class="logo">My Healthy Cat</h1>
+      <h1 id="logo">My Healthy Cat</h1>
     </header>
     <h2>funny cats</h2>
     <p>Sice je důležité vědět, jak se o kočičí mazlíčky správně starat, ale neméně důležité je nechat se jimi pobavit. Tato zvířátka jsou významným zdrojem tzv. memů (vtipné obrázky či krátká videa, mnohdy s popiskem) na internetu. Užijte si proto následující obrázky!</p>
