--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>My Healthy Cat</title>
-  <link rel="icon" type="image/x-icon" href="images/Návrh bez názvu.png" />
+  <link rel="icon" type="image/x-icon" href="../images/Návrh bez názvu.png" />
   <link rel="stylesheet" href="../css/main.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,11 @@
     -->
     <header>
       <h1 id="logo">My Healthy Cat</h1>
+      <div class="socials">
+        <a href=""><img class="icon facebook" src="images/facebook.png" alt="facebook link"></a>
+        <a href=""><img class="icon" src="images/instagram.png" alt="instagram link"></a>
+        <a href=""><img class="icon" src="images/youtube.png" alt="youtube link"></a>
+      </div>
     </header>
    
     <footer>
