--- a/memes/memes.html
+++ b/memes/memes.html
@@ -25,15 +25,17 @@
     <header>
       <h1 id="logo">My Healthy Cat</h1>
     </header>
-    <h2>funny cats</h2>
+    <h2>Funny Cats</h2>
     <p>Sice je důležité vědět, jak se o kočičí mazlíčky správně starat, ale neméně důležité je nechat se jimi pobavit. Tato zvířátka jsou významným zdrojem tzv. memů (vtipné obrázky či krátká videa, mnohdy s popiskem) na internetu. Užijte si proto následující obrázky!</p>
-   <img src="images/meme1.jpg" alt="frajer">
-   <img src="images/meme2.jpg" alt="kočka v práci">
-   <img src="images/meme3.jpg" alt="hladová kočka">
-   <img src="images/meme crying cat.jpg" alt="smutná kočka">
-   <img src="images/meme cat in milk.jpg" alt="kočka v mléku">
-   <img src="images/meme skleneny stul" alt="zespoda na skle">
-   <img src="images/meme tlusta kocka.jpg" alt="tlustá kočka">
+<section>
+    <img src="../images/meme1.jpg" alt="frajer" height="300px">
+   <img src="../images/meme2.jpg" alt="kočka v práci" height="350px">
+   <img src="../images/meme3.jpg" alt="hladová kočka" height="300px">
+   <img src="../images/meme_crying_cat.jpg" alt="smutná kočka" width="400px">
+   <img src="../images/meme_cat_in_milk.jpg" alt="kočka v mléku" height="300px">
+   <img src="../images/meme_skleneny_stul.jpg" alt="zespoda na skle" width="400px">
+   <img src="../images/meme_tlusta_kocka.jpg" alt="tlustá kočka">
+</section>
     <footer>
         My Healthy Cat 2024
     </footer>
