--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="cs">
+
 <head>
-  <meta charset="UTF-8" />
-  <title>My Healthy Cat</title>
-  <link rel="icon" type="image/x-icon" href="images/Návrh bez názvu.png" />
-  <link rel="stylesheet" href="../css/main.css" />
-  <link rel="stylesheet" href="galerie.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playwrite+CZ:wght@100..400&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <title>My Healthy Cat</title>
+    <link rel="icon" type="image/x-icon" href="../images/Návrh bez názvu.png" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="galerie.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+CZ:wght@100..400&display=swap" rel="stylesheet">
 </head>
 
- <body class="mainContainer">
+<body class="mainContainer">
 
-     <!--
+    <!--
     <h1>team 6</h1>
     <ul>
         <li>Laura Popková</li>
@@ -25,11 +26,31 @@
     </ul>
     -->
     <header>
-      <h1 id="logo">My Healthy Cat</h1>
+        <h1 id="logo">My Healthy Cat</h1>
     </header>
-    <h1>Fotky našich klientů</h1>
+    <h2 class="nadpis">Fotky od našich klientů</h2>
+    <div class="container">
+        <div>
+            <img id="img" src="../images/th.jpg" alt="Kočka na břichu">
+            <p></p>
+        </div>
+
+        <div>
+            <img id="img" src="../images/OIP.jpg" alt="kočka s kytičkou">
+        </div>
+        <div>
+            <img id="img" src="../images/kocka-laska-radaveterinare-big.jpg" alt="dvě kočky ležící vedle sebe">
+        </div>
+        <div>
+            <img id="img" src="../images/stáhnout.jpg" alt="kočka v trávě">
+        </div>
+        <div>
+            <img id="img" src="../images/OIP (1).jpg" alt="kočka ležící na břichu">
+        </div>
+    </div>
     <footer>
         My Healthy Cat 2024
     </footer>
 </body>
+
 </html>
