--- a/memes/memes.html
+++ b/memes/memes.html
@@ -31,10 +31,12 @@
     <img src="../images/meme1.jpg" alt="frajer" height="300px">
    <img src="../images/meme2.jpg" alt="kočka v práci" height="350px">
    <img src="../images/meme3.jpg" alt="hladová kočka" height="300px">
-   <img src="../images/meme_crying_cat.jpg" alt="smutná kočka" width="400px">
+   <img src="../images/meme_sad_cat.jpg" alt="smutná kočka" width="400px">
    <img src="../images/meme_cat_in_milk.jpg" alt="kočka v mléku" height="300px">
    <img src="../images/meme_skleneny_stul.jpg" alt="zespoda na skle" width="400px">
    <img src="../images/meme_tlusta_kocka.jpg" alt="tlustá kočka">
+   <img src="../images/meme_sklenice.jpg" alt="ve skleničce" height="300px">
+
 </section>
     <footer>
         My Healthy Cat 2024
