--- a/rady/rady.html
+++ b/rady/rady.html
@@ -25,26 +25,76 @@
     <header>
       <h1 id="logo">My Healthy Cat</h1>
     </header>
+ <div class="hrasek">
+ <div class="article-container">
+    <div class="article-box">
     <h3>1. Zajištění základních potřeb</h3>
     <p class="baf">Strava: Krmte svou kočku kvalitními granulemi nebo konzervami, které odpovídají jejím věkovým potřebám (kotě, dospělá kočka, starší kočka). Vyhněte se lidským potravinám, které mohou být pro kočky nebezpečné. 
         Voda: Kočka by měla mít neustále přístup k čerstvé vodě. Některé kočky preferují tekoucí vodu, proto může být užitečné pořídit fontánku pro kočky. 
         Stelivo: Čistěte kočičí toaletu pravidelně, aby byla vždy čistá. Kočky jsou velmi čistotné a špinavá toaleta je může odradit od jejího používání.</p>
+    </div>
+    <div class="article-box">
         <h3>2. Zdraví</h3>
         <p class="baf">Veterinární péče: Pravidelné návštěvy veterináře jsou klíčové. Kočky potřebují očkování, odčervení a pravidelné prohlídky. 
             Kastrovaní: Kastrace nebo sterilizace může předejít mnoha zdravotním problémům a také nežádoucímu chování, jako je značkování teritoria. </p>
-          <h3>3. Chování a socializace</h3> 
+    </div>
+    <div class="article-box">
+            <h3>3. Chování a socializace</h3> 
             <p class="baf">Socializace: Pokud máte kotě, seznamte ho s různými lidmi a prostředím, aby bylo dobře socializované. U dospělých koček to může trvat déle, ale stále je to možné. 
                 Škrábání: Poskytněte kočce škrabadlo, aby si mohla brousit drápky. To jí pomůže udržovat zdravé drápy a zároveň chrání váš nábytek. 
                 Hry a zábava: Kočky jsou velmi hravé a potřebují stimulaci. Pořiďte jim hračky, které je budou bavit a zaměstnávat. Interaktivní hračky a denní doba hraní s vámi pomůže udržet kočku fyzicky i psychicky zdravou. </p>
-            <h3>4. Bezpečnost</h3>
+    </div>
+    <div class="article-box">
+                <h3>4. Bezpečnost</h3>
             <p class="baf">Venkovní rizika: Pokud má kočka přístup ven, zajistěte, aby byla v bezpečném prostředí. Ideální je venkovní prostor s omezeným přístupem nebo zabezpečený výběh. 
                 Nebezpečné rostliny a chemikálie: Některé rostliny a domácí chemikálie jsou pro kočky toxické. Ujistěte se, že vaše kočka nemá k těmto látkám přístup.</p>
-            <h3>5. Trpělivost a láska </h3>
+   </div>  
+   <div class="article-box">
+                <h3>5. Trpělivost a láska </h3>
             <p class="baf">Trpělivost: Kočky mají svou vlastní osobnost a někdy mohou být tvrdohlavé. Buďte trpěliví a respektujte jejich prostor a tempo. 
                 Láska a pozornost: Kočky potřebují vaši lásku a pozornost. Věnujte jim čas na mazlení a hru, aby se cítily milované a součástí rodiny.</p>
+    </div>
+    <div class="article-box">
                 <h3>Proč není doporučeno dávat vaší kočce mléko?:</h3>
-                
-    <footer>
+                <p class="baf">Odstraňování drápků u koček zahrnuje úplné odstranění prvního kloubu prstů. Tato praxe byla v mnoha zemích zakázána a při diskusích o ní často panuje napětí. Odstraňování drápků u koček je však spojováno s artritidou, generalizovanou bolestí a problémy s chováním. Některé kočky bez drápků odmítají používat kočičí záchod, protože hrabání v podestýlce bolí jejich nohy, zatímco jiné mohou být náchylné ke kousání, protože jim byl odstraněn první ochranný prostředek. Poškození nervů a infekce kostí nejsou neobvyklé, a pokud nejsou prováděny správně, můžete mít potíže s tím, aby se nohy vaší kočky uzdravily po operaci drápků. 
+                </p>
+    </div>
+    <div class="article-box">
+            <h3>Také si dávejte pozor na syrové maso, ryby a vejce. </h3>
+                <p class="baf">Přestože nejsou vejce, syrové maso a ryby pro kočky přímo jedovaté,  mohou obsahovat potenciálně škodlivé bakterie, jako je E. coli a salmonela. Syrová vejce navíc obsahují specifický enzym 
+                    (avidin), který může snížit vstřebávání biotinu, jednoho z vitaminů skupiny B.                   
+                   Z dlouhodobého hlediska to může vést k problémům s kůží a srstí. Syrové ryby také obsahují jiný enzym, který ničí další vitamín B, thiamin. Jedná se o nezbytný vitamín pro kočky a jeho nedostatek může vést k vážným neurologickým poruchám, které v konečném důsledku vedou ke křečím a kómatu. </p>
+    </div>
+    <div class="article-box">
+            <h3>Cibule, česnek a pažitka</h3>
+               <p class="baf">Co se stane: U koček, když jsou tyto sloučeniny obsahující síru rozloženy tělem a absorbovány do krevního oběhu, způsobují poškození červených krvinek. V závažných případech červené krvinky prasknou a uvolní poškozené proteiny hemoglobinu zvané Heinzova tělíska, což může vést k anémii a dokonce k poškození ledvin. 
+               </p>
+    </div>
+    <div class="article-box">
+            <h3>Xylitol</h3>
+               <p class="baf">Co se stane: 
+                Když ho snědí kočky, může xylitol způsobit abnormální zvýšení uvolňování inzulínu ze slinivky břišní, což zase vede ke snížení celkové hladiny cukru v krvi.                 
+                Časnými příznaky problému s xylitolem jsou letargie, zvracení a ztráta svalové koordinace, ale bez rychlé léčby to může vést k selhání jater a záchvatům. </p>
+    </div>
+    <div class="article-box">
+                <h3>Kávové kapsle, zrna, mleté a kofeinové energetické nápoje </h3>
+              <p class="baf">Co se stane: U koček má požití kofeinu vliv na střeva, ledviny, nervový a kardiovaskulární systém a pokud se neléčí, může být smrtelné. 
+                Dalším rizikem pro kočky je, že kofein chutná hořce, což ho činí pro kočky velmi přitažlivým. Uvědomte si, že kofein je přítomen v mnoha energetických nápojích a kolách. Kromě toho se potenciálně smrtelný účinek může exponenciálně zhoršit, pokud je obsažen v kakau a čokoládě. </p>
+    </div>
+    <div class="article-box">        
+                <h3>Čokoláda</h3>
+              <p class="baf">Co se stane: Pokud ho sní vaše kočka, může to rychle způsobit žaludeční nevolnost; hyperaktivita; nepříznivě ovlivňují ledviny a nervový systém a také vyvolávají abnormální srdeční rytmus. V nejhorším případě může být smrtelná. 
+                Hořká čokoláda, kakaový prášek, kakaové máslo a kakaové boby jsou nejnebezpečnějšími druhy čokolády, protože obsahují nejvyšší hladiny theobrominu ve srovnání s mléčnou nebo dokonce bílou čokoládou.                
+                Hořká čokoláda je bohužel také nejpravděpodobnějším druhem čokolády, který vaši kočku osloví, protože má hořkou chuť. </p>
+    </div>
+    <div class="article-box">       
+                <h3>Alkohol</h3>
+              <p class="baf">Co se stane: Alkohol může způsobit zvracení, průjem, sníženou koordinaci a depresi centrálního nervového systému. Pokud se neléčí, může vést k dýchacím potížím, třesu, změně pH krve a vyvolat kóma nebo záchvaty, což nakonec vede ke smrti. 
+                Alkohol také není vždy zjevně prezentován jako nápoj, protože může být obsažen v mnoha "normálních" domácích předmětech, včetně syrového droždí na pečení chleba a hnijícího/kvasícího ovoce. </p>
+    </div> 
+  </div>
+</div>
+ <footer>
         My Healthy Cat 2024
     </footer>
 </body>
