--- a/rady/rady.html
+++ b/rady/rady.html
@@ -96,6 +96,11 @@
   </div>
 </div>
  <footer>
+                <p class="baf">Kočky postrádají enzymy nezbytné ke správnému trávení laktózy, což je cukr přítomný v kravském mléce. Podávání kravského mléka vaší kočce může vést k průjmu a bolestem žaludku, což je nepříjemné pro vaši kočku i pro vás a může dokonce vést k návštěvě veterináře. Kravské mléko je pro koťata obzvláště nebezpečné, zejména odstředěná mléka a jiná mléka s nízkým obsahem tuku, protože neobsahuje živiny, které koťata potřebují k prospívání. Stejně jako dospělé kočky nejsou koťata schopna správně trávit kravské mléko, což vede k průjmu a dehydrataci, která může být smrtelná. </p>
+            <h3>Proč je odstraňování drápků pro vaše kočky škodlivé?: </h3>
+                <p class="baf">Odstraňování drápků u koček zahrnuje úplné odstranění prvního kloubu prstů. Tato praxe byla v mnoha zemích zakázána a při diskusích o ní často panuje napětí. Odstraňování drápků u koček je však spojováno s artritidou, generalizovanou bolestí a problémy s chováním. Některé kočky bez drápků odmítají používat kočičí záchod, protože hrabání v podestýlce bolí jejich nohy, zatímco jiné mohou být náchylné ke kousání, protože jim byl odstraněn první ochranný prostředek. Poškození nervů a infekce kostí nejsou neobvyklé, a pokud nejsou prováděny správně, můžete mít potíže s tím, aby se nohy vaší kočky uzdravily po operaci drápků. 
+                </p>
+    <footer>
         My Healthy Cat 2024
     </footer>
 </body>
