--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -30,22 +30,26 @@
     </header>
     <h2 class="nadpis">Fotky od našich klientů</h2>
     <div class="container">
-        <div>
+        <div class="obrazek">
             <img id="img" src="../images/th.jpg" alt="Kočka na břichu">
-            <p></p>
+            <p>jsem roza</p>
         </div>
 
-        <div>
+        <div class="obrazek">
             <img id="img" src="../images/OIP.jpg" alt="kočka s kytičkou">
+            <p>jsem roza</p>
         </div>
-        <div>
+        <div class="obrazek">
             <img id="img" src="../images/kocka-laska-radaveterinare-big.jpg" alt="dvě kočky ležící vedle sebe">
+            <p>jsem roza</p>
         </div>
-        <div>
+        <div class="obrazek">
             <img id="img" src="../images/stáhnout.jpg" alt="kočka v trávě">
+            <p>jsem roza</p>
         </div>
-        <div>
+        <div class="obrazek">
             <img id="img" src="../images/OIP (1).jpg" alt="kočka ležící na břichu">
+            <p>jsem roza</p>
         </div>
     </div>
     <footer>
