--- a/memes/memes.html
+++ b/memes/memes.html
@@ -26,16 +26,25 @@
       <h1 id="logo">My Healthy Cat</h1>
     </header>
     <h2>Funny Cats</h2>
+   
     <p>Sice je důležité vědět, jak se o kočičí mazlíčky správně starat, ale neméně důležité je nechat se jimi pobavit. Tato zvířátka jsou významným zdrojem tzv. memů (vtipné obrázky či krátká videa, mnohdy s popiskem) na internetu. Užijte si proto následující obrázky!</p>
 <section>
-    <img src="../images/meme1.jpg" alt="frajer" height="300px">
-   <img src="../images/meme2.jpg" alt="kočka v práci" height="350px">
-   <img src="../images/meme3.jpg" alt="hladová kočka" height="300px">
-   <img src="../images/meme_sad_cat.jpg" alt="smutná kočka" width="400px">
-   <img src="../images/meme_cat_in_milk.jpg" alt="kočka v mléku" height="300px">
-   <img src="../images/meme_skleneny_stul.jpg" alt="zespoda na skle" width="400px">
+  <p>
+    <div class="gallery-img">
+   <img src="../images/meme1.jpg" alt="frajer" >
+   <img src="../images/meme2.jpg" alt="kočka v práci" >
+   <img src="../images/meme3.jpg" alt="hladová kočka">
+   <img src="../images/meme_sad_cat.jpg" alt="smutná kočka">
+   <img src="../images/meme_cat_in_milk.jpg" alt="kočka v mléku">
+   <img src="../images/meme_skleneny_stul.jpg" alt="zespoda na skle">
    <img src="../images/meme_tlusta_kocka.jpg" alt="tlustá kočka">
-   <img src="../images/meme_sklenice.jpg" alt="ve skleničce" height="300px">
+   <img src="../images/meme_sklenice.jpg" alt="ve skleničce">
+   <img src="../images/meme_snack.jpg" alt="snack">
+   <img src="../images/meme_selfie.jpg" alt="selfie">
+   <img src="../images/meme_math.jpg" alt="matika">
+   <img src="../images/meme_rucicky.jpg" alt="ručičky">
+</div>
+</p>
 
 </section>
     <footer>
