--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <title>My Healthy Cat</title>
   <link rel="icon" type="image/x-icon" href="images/Návrh bez názvu.png" />
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/main.css"/>
+  <link rel="stylesheet" href="home-page/home-main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playwrite+CZ:wght@100..400&display=swap" rel="stylesheet">
@@ -22,12 +23,51 @@
     </ul>
     -->
     <header>
-      <h1>My Healthy Cat</h1>
-      <img src="images/cat.png" alt="cats" />
+      <h1 id="logo">My Healthy Cat</h1>
+      <div class="socials">
+        <a href=""><img class="icon facebook" src="images/facebook.png" alt="facebook link"></a>
+        <a href=""><img class="icon" src="images/instagram.png" alt="instagram link"></a>
+        <a href=""><img class="icon" src="images/youtube.png" alt="youtube link"></a>
+      </div>
     </header>
+
+    <main>
+        <section class="introduction">
+            <img class="intro-img" src="images/cat.png" alt="cats"/>
+            <section class="right-side">
+                <p class="description">
+                    Stránka "My healthy cat" je ideálním místem pro všechny, kteří chtějí zajistit svým kočičím mazlíčkům co nejlepší péči. Naše stránka se zaměřuje na poskytování užitečných tipů a rad, co dělat a nedělat jako majitel kočky, abyste zajistili zdraví, štěstí a pohodu svého chlupatého kamaráda. Naše stránka je pravidelně aktualizována novými články a radami, které vám pomohou vytvořit harmonický a láskyplný domov pro vaši kočku. Navštivte nás a staňte se součástí komunity, která miluje kočky a sdílí zkušenosti a rady, jak o ně co nejlépe pečovat.
+                      </p>
+                <section class="page-link">
+                    <a class="button" href="memes/memes.html">Memes</a>
+                    <a class="button" href="rady/rady.html">Rady</a>
+                    <a class="button" href="galerie/galerie.html">Galerie</a>
+                </section>
+            </section>
+        </section>
+    </main>
+
+    <footer>
+        My Healthy Cat 2024
+    </footer>
    
-    <p>
-      Stránka "My healthy cat" je ideálním místem pro všechny, kteří chtějí zajistit svým kočičím mazlíčkům co nejlepší péči. Naše stránka se zaměřuje na poskytování užitečných tipů a rad, co dělat a nedělat jako majitel kočky, abyste zajistili zdraví, štěstí a pohodu svého chlupatého kamaráda. Naše stránka je pravidelně aktualizována novými články a radami, které vám pomohou vytvořit harmonický a láskyplný domov pro vaši kočku. Navštivte nás a staňte se součástí komunity, která miluje kočky a sdílí zkušenosti a rady, jak o ně co nejlépe pečovat.
-    </p>
+    <!-- <section class="introduction">
+        <img class="intro-img" src="images/cat.png" alt="cats"/>
+        <section class="right-side">
+            <p class="description">
+                Stránka "My healthy cat" je ideálním místem pro všechny, kteří chtějí zajistit svým kočičím mazlíčkům co nejlepší péči. Naše stránka se zaměřuje na poskytování užitečných tipů a rad, co dělat a nedělat jako majitel kočky, abyste zajistili zdraví, štěstí a pohodu svého chlupatého kamaráda. Naše stránka je pravidelně aktualizována novými články a radami, které vám pomohou vytvořit harmonický a láskyplný domov pro vaši kočku. Navštivte nás a staňte se součástí komunity, která miluje kočky a sdílí zkušenosti a rady, jak o ně co nejlépe pečovat.
+                  </p>
+            <section class="page-link">
+                <a class="button" href="">Pravidla</a>
+                <a class="button" href="">Rady</a>
+            </section>
+        </section>
+    </section> -->
+
+    <!-- <section class="page-link">
+        <a class="button" href="">Pravidla</a>
+        <a class="button" href="">Rady</a>
+    </section> -->
+
 </body>
 </html>
