--- a/memes/memes.html
+++ b/memes/memes.html
@@ -29,7 +29,7 @@
    
     <p>Sice je důležité vědět, jak se o kočičí mazlíčky správně starat, ale neméně důležité je nechat se jimi pobavit. Tato zvířátka jsou významným zdrojem tzv. memů (vtipné obrázky či krátká videa, mnohdy s popiskem) na internetu. Užijte si proto následující obrázky!</p>
 <section>
-  <p>
+  
     <div class="gallery-img">
    <img src="../images/meme1.jpg" alt="frajer" >
    <img src="../images/meme2.jpg" alt="kočka v práci" >
@@ -43,8 +43,9 @@
    <img src="../images/meme_selfie.jpg" alt="selfie">
    <img src="../images/meme_math.jpg" alt="matika">
    <img src="../images/meme_rucicky.jpg" alt="ručičky">
+   <img src="../images/kocka_nee.avif" alt="odpor">
+   <img src="../images/meme_eepy.webp" alt="sleepy cat">
 </div>
-</p>
 
 </section>
     <footer>
