--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
     </ul>
     -->
     <header>
-      <h1 id="logo">My Healthy Cat</h1>
-      <div class="socials">
-        <a href=""><img class="icon facebook" src="images/facebook.png" alt="facebook link"></a>
-        <a href=""><img class="icon" src="images/instagram.png" alt="instagram link"></a>
-        <a href=""><img class="icon" src="images/youtube.png" alt="youtube link"></a>
-      </div>
+        <div id="logo">
+           <img class="logo-img" src="images/Návrh bez názvu.png" alt="logo">
+           <h1 class="title">My Healthy Cat</h1> 
+        </div> 
+        
+        <div class="socials">
+            <a href=""><img class="icon facebook" src="images/facebook.png" alt="facebook link"></a>
+            <a href=""><img class="icon" src="images/instagram.png" alt="instagram link"></a>
+            <a href=""><img class="icon" src="images/youtube.png" alt="youtube link"></a>
+        </div>
     </header>
 
     <main>
