--- a/galerie/galerie.html
+++ b/galerie/galerie.html
@@ -28,29 +28,58 @@
     <header>
         <h1 id="logo">My Healthy Cat</h1>
     </header>
-    <h2 class="nadpis">Fotky od našich klientů</h2>
+    <h2 class="nadpis">Fotky a recenze od našich klientů</h2>
     <div class="container">
         <div class="obrazek">
             <img id="img" src="../images/th.jpg" alt="Kočka na břichu">
-            <p>jsem roza</p>
+            <p>Stránka "My Healthy Cat" je vynikajícím průvodcem pro každého, kdo má doma kočku. Nabízí užitečné a snadno pochopitelné rady, které pokrývají všechny důležité aspekty péče o kočky.</p>
         </div>
 
         <div class="obrazek">
             <img id="img" src="../images/OIP.jpg" alt="kočka s kytičkou">
             <p>jsem roza</p>
         </div>
+
         <div class="obrazek">
             <img id="img" src="../images/kocka-laska-radaveterinare-big.jpg" alt="dvě kočky ležící vedle sebe">
             <p>jsem roza</p>
         </div>
+
+        <div class="obrazek">
+            <img id="img" src="../images/OIP (5).jpg" alt="kočka ležící na gauči">
+            <p>jsem roza</p>
+        </div>
+
         <div class="obrazek">
             <img id="img" src="../images/stáhnout.jpg" alt="kočka v trávě">
             <p>jsem roza</p>
         </div>
+
+        <div class="obrazek">
+            <img id="img" src="../images/stáhnout (1).jpg" alt="kočka ležící na břichu">
+            <p>jsem roza</p>
+        </div>
+
+        <div class="obrazek">
+            <img id="img" src="../images/OIP (2).jpg" alt="kočka ležící na břichu">
+            <p>jsem roza</p>
+        </div>
+
         <div class="obrazek">
             <img id="img" src="../images/OIP (1).jpg" alt="kočka ležící na břichu">
             <p>jsem roza</p>
         </div>
+
+        <div class="obrazek">
+                <img id="img" src="../images/OIP (3).jpg" alt="kočka ležící na břichu">
+                <p>jsem roza</p>
+        </div>
+
+        <div class="obrazek">
+            <img id="img" src="../images/th (1).jpg" alt="kočka ležící na břichu">
+            <p>jsem roza</p>
+        </div>
+       
     </div>
     <footer>
         My Healthy Cat 2024
